[gd_scene load_steps=5 format=3 uid="uid://cvkideptcxtuk"]

[ext_resource type="Theme" uid="uid://nftx016qubrw" path="res://scenes/home/ui/stats/theme.tres" id="1_08kce"]
[ext_resource type="Texture2D" uid="uid://25gh2odtifhv" path="res://scenes/home/ui/stats/heart.png" id="2"]
[ext_resource type="Texture2D" uid="uid://b2l8td6ax26uf" path="res://scenes/home/ui/stats/fun.png" id="4"]
[ext_resource type="Script" path="res://scenes/home/ui/stats/StatusPanel.gd" id="5"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 97.0
offset_bottom = 115.0
theme = ExtResource("1_08kce")
script = ExtResource("5")

[node name="BasicDisplay" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 1
columns = 2

[node name="Label" type="Label" parent="BasicDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Food"

[node name="PanelContainer" type="PanelContainer" parent="BasicDisplay"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="LifeMeter" type="TextureProgressBar" parent="BasicDisplay/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
max_value = 5.0
value = 5.0
allow_greater = true
texture_progress = ExtResource("2")

[node name="Label2" type="Label" parent="BasicDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Mood"

[node name="PanelContainer2" type="PanelContainer" parent="BasicDisplay"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HappyMeter" type="TextureProgressBar" parent="BasicDisplay/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
max_value = 5.0
value = 3.0
allow_greater = true
texture_progress = ExtResource("4")

[node name="Label3" type="Label" parent="BasicDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Weight"

[node name="PanelContainer3" type="PanelContainer" parent="BasicDisplay"]
layout_mode = 2

[node name="Weight" type="Label" parent="BasicDisplay/PanelContainer3"]
unique_name_in_owner = true
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "15.6 lbs"

[node name="Label4" type="Label" parent="BasicDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Age"

[node name="PanelContainer4" type="PanelContainer" parent="BasicDisplay"]
layout_mode = 2

[node name="Age" type="Label" parent="BasicDisplay/PanelContainer4"]
unique_name_in_owner = true
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "00d 02h 02m"

[node name="Label5" type="Label" parent="BasicDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Status"

[node name="PanelContainer5" type="PanelContainer" parent="BasicDisplay"]
layout_mode = 2

[node name="Mood" type="Label" parent="BasicDisplay/PanelContainer5"]
unique_name_in_owner = true
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Stinky"

[node name="DetailedDisplay" type="GridContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 1
columns = 2

[node name="Label" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Hunger"

[node name="PanelContainer" type="PanelContainer" parent="DetailedDisplay"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HungryValue" type="Label" parent="DetailedDisplay/PanelContainer"]
unique_name_in_owner = true
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "0.0"

[node name="Label2" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Boredom"

[node name="PanelContainer2" type="PanelContainer" parent="DetailedDisplay"]
layout_mode = 2

[node name="BoredomValue" type="Label" parent="DetailedDisplay/PanelContainer2"]
unique_name_in_owner = true
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "0.0"

[node name="Label3" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Tired"

[node name="PanelContainer3" type="PanelContainer" parent="DetailedDisplay"]
layout_mode = 2

[node name="TirednessValue" type="Label" parent="DetailedDisplay/PanelContainer3"]
unique_name_in_owner = true
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "0.0"

[node name="Label4" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Dirty"

[node name="PanelContainer4" type="PanelContainer" parent="DetailedDisplay"]
layout_mode = 2

[node name="DirtyValue" type="Label" parent="DetailedDisplay/PanelContainer4"]
unique_name_in_owner = true
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "0.0"

[node name="Label5" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "Sick"

[node name="PanelContainer5" type="PanelContainer" parent="DetailedDisplay"]
layout_mode = 2

[node name="SickValue" type="Label" parent="DetailedDisplay/PanelContainer5"]
unique_name_in_owner = true
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
text = "0.0"
